# LogicGame

./: CMakeLists.txt  README.md  click.cpp  click.h  clickcommand.cpp  clickcommand.h  createmap.cpp  createmap.h  createmap.ui  dialog.cpp  dialog.h  dialog.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  globals.cpp  globals.h  levels.cpp  levels.h  levels.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.cpp  map.h  player.cpp  player.h  resources.qrc
icon/: icon.rc
map/: config.txt  map1.txt  Уровень 1.txt  Уровень 2.txt  Уровень 3.txt  Уровень 4.txt  Уровень 5.txt  Уровень 6.txt  Уровень 7.txt  Уровень 8.txt  Уровень 9.txt
